<resources>
    <string name="app_name">PersonalTasks</string>
    <string name="title">Title</string>
    <string name="description">description</string>
    <string name="deadline">deadline</string>
    <string name="save">save</string>
    <string name="remove_task">remove task</string>
    <string name="edit_task">edit task</string>
    <string name="detail_task">detail task</string>
    <string name="add_task">add task</string>
    <string name="cancel">cancel</string>
    <string name="status">status</string>
    <string name="priority">priority</string>
</resources>